Minor changes/bug fixes